--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -10,7 +10,7 @@
             SIGL
           </h1>
           <p class="sub-title">
-            La majeure dédiée au Système d'information et au Génie Logiciel
+            La majeure dédiée au Système d'Information et au Génie Logiciel
           </p>
         </div>
       </div>
@@ -31,10 +31,10 @@
       <div class="main-about">
         <div class="col-md-4 col-sm-4 col-xs-12 np">
           <div class="img-left-01">
-            <img src="../assets/images/about/01.jpg" alt="about">
+            <img src="./assets/images/about/01.jpg" alt="about">
           </div>
           <div class="img-left-02">
-            <img src="../assets/images/about/02.jpg" alt="about">
+            <img src="./assets/images/about/02.jpg" alt="about">
           </div>
         </div>
         <!-- /.col -->
@@ -53,7 +53,7 @@
         <!-- /.col -->
         <div class="col-md-4 col-sm-4 col-xs-12 np">
           <div class="img-right">
-            <img src="../assets/images/about/03.jpg" alt="about">
+            <img src="./assets/images/about/03.jpg" alt="about">
           </div>
         </div>
         <!-- /.col -->
@@ -719,7 +719,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/cloud.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/cloud.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">Cloud Hybride</h4>
@@ -732,7 +732,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">VIRT</h4>
@@ -746,7 +746,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/iot.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/iot.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">IoT</h4>
@@ -759,7 +759,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/pae.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/pae.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">PAE</h4>
@@ -773,7 +773,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                       <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">URSI</h4>
@@ -786,7 +786,7 @@
                         <div class="col-xs-12 col-md-4">
                             <div class="box">
                                 <div style="margin: 20px;" data-os-animation="fadeInDown">
-                                    <span><img src="../assets/images/assetProject/www.jpg" width="70" height="70"/></span>
+                                    <span><img src="./assets/images/assetProject/www.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
                                     <h4 class="text-center">Web Technologies</h4>
@@ -862,19 +862,19 @@
                                 <ul class="nav review-nav" id="nav-tabs" role="tablist">
                                     <li role="presentation" class="">
                                         <a href="#phil" aria-controls="phil" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="../assets/images/review/01.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="./assets/images/review/01.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
                                     <li role="presentation" class="active">
                                         <a href="#jane" aria-controls="jane" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="../assets/images/review/02.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="./assets/images/review/02.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
                                     <li role="presentation" class="">
                                         <a href="#ben" aria-controls="ben" role="tab" data-toggle="tab">
-                                            <img class="img-circle" src="../assets/images/review/03.jpg" alt="review" width="130">
+                                            <img class="img-circle" src="./assets/images/review/03.jpg" alt="review" width="130">
                                             <span class="quote"><i class="fa fa-quote-left"></i></span>
                                         </a>
                                     </li>
@@ -904,7 +904,7 @@
       <div class="col-md-7 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/03.jpg" alt="blog">
+            <img src="./assets/images/blog/03.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -935,7 +935,7 @@
       <div class="col-md-5 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/05.jpg" alt="blog">
+            <img src="./assets/images/blog/05.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -944,7 +944,7 @@
           </div>
           <!-- /.card-date -->
           <div class="card-body">
-            <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
+            <h3 class="card-title">Blog Title</h3>
             <div class="card-subtitle">Lacus elementum pellentesque</div>
             <p class="card-description">
               Aliquam molestie imperdiet justo, sagittis euismod nisi rutrum a. Cras et varius felis, eu maximus dui. Suspendisse venenatis
@@ -967,7 +967,7 @@
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/01.jpg" alt="blog">
+            <img src="./assets/images/blog/01.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -976,7 +976,7 @@
           </div>
           <!-- /.card-date -->
           <div class="card-body">
-            <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
+            <h3 class="card-title">Blog Title</h3>
             <div class="card-subtitle">Nullam cursus condimentum</div>
             <p class="card-description">
               Aliquam molestie imperdiet justo, sagittis euismod nisi rutrum a. Cras et varius felis, eu maximus dui. Suspendisse venenatis
@@ -1007,7 +1007,7 @@
           </div>
           <!-- /.card-date -->
           <div class="card-body">
-            <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
+            <h3 class="card-title">Blog Title</h3>
             <div class="card-subtitle">Lacus elementum pellentesque</div>
             <p class="card-description">
               Aliquam molestie imperdiet justo, sagittis euismod nisi rutrum a. Cras et varius felis, eu maximus dui. Suspendisse venenatis
@@ -1029,7 +1029,7 @@
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
-            <img src="../assets/images/blog/03.jpg" alt="blog">
+            <img src="./assets/images/blog/03.jpg" alt="blog">
           </header>
           <!-- /.header -->
           <div class="card-date">
@@ -1038,7 +1038,7 @@
           </div>
           <!-- /.card-date -->
           <div class="card-body">
-            <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
+            <h3 class="card-title">Blog Title</h3>
             <div class="card-subtitle">Suspendisse sollicitudin nulla</div>
             <p class="card-description">
               Aliquam molestie imperdiet justo, sagittis euismod nisi rutrum a. Cras et varius felis, eu maximus dui. Suspendisse venenatis
@@ -1071,41 +1071,6 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
-        <div class="appstore">
-          <div class="col-sm-3 col-xs-12 np">
-            <div class="appstore-icon os-animation" data-os-animation="bounceIn" data-os-animation-delay="0.2s">
-              <img class="logo" src="../assets/images/logo-2.png" alt="logo">
-            </div>
-            <!-- /.box-icon -->
-          </div>
-          <!-- /.col -->
-          <div class="col-sm-9 col-xs-12 np">
-            <div class="info">
-              <h4>Skapp Landing Page</h4>
-              <p>
-                By Saerox
-              </p>
-              <div class="ratings inline-block">
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-                <span><i class="fa fa-star"></i></span>
-                <span class="nb-ratings">(357)</span>
-              </div>
-            </div>
-            <!-- /.info -->
-          </div>
-          <!-- /.col -->
-        </div>
-      </div>
-      <div class="col-md-6">
-        <p class="copyright">
-          ©Skapp 2017 made by Saerox in france.
-        </p>
-      </div>
-      <!-- /.col -->
       <div class="col-md-6">
         <ul class="social-network">
           <li><a href="#" class="ico-facebook" title="Facebook">
@@ -1114,11 +1079,7 @@
           <li><a href="#" class="ico-twitter" title="Twitter">
                                 <i class="fa fa-twitter"></i></a>
           </li>
-          <li><a href="https://www.behance.net/Saerox" class="ico-behance" title="Behance">
-                                <i class="fa fa-behance"></i></a>
-          </li>
-          <li><a href="http://dsaerox.deviantart.com/" class="ico-deviantart" title="Deviantart">
-                                <i class="fa fa-deviantart"></i></a>
+
           </li>
         </ul>
       </div>
